content/V1/Mecânicas/Técnica Inata Personalizada.md
O mundo de Jujutsu é composto por uma miríada de Técnicas Inatas, mas os jogadores não estão presos às Técnicas inspiradas nos personagens da obra. A ideia é explorar ao máximo a criatividade dos jogadores e tornar os aspectos de roleplay e de combate mais próximos um do outro. 

A Técnica Inata é uma simplificação da personalidade, objetivos e forma de abordar situações de um personagem em específico. A interpretação da Técnica também impacta, fazendo até mesmo dois usuários da mesma Técnica terem variações que exprimem suas essências.

O principal ponto para evoluir sua Técnica Inata é a visualização: Você pode fazer qualquer coisa, desde que acredite que seja possível. O primeiro passo para a criação de sua expressão é utilizar uma Técnica já existente como base. Você pode alterar o tipo de dano ou algum efeito secundário, por exemplo.

Ao criar algo do zero, trate da mesma forma que você trata os Votos Vinculativos: converse com o Mestre e alinhe todos os pontos possíveis. Você não precisa pensar de cara em todas as evoluções da técnica, defina sua usabilidade básica e deixe a própria narrativa trazer ideias de aplicações avançadas para os níveis mais altos, sempre alinhando as expectativas com o Mestre.  
Uma técnica que é ofensiva, defensiva, provê movimentação e suporte não é uma técnica realista: você deve abrir mão de X para obter eficiência em Y. Considere também que as Técnicas Inatas possuem uma progressão relativamente semelhante e molde a sua em volta disso.
# Progressão

## Atributo de Conjuração
Primeiro, determine o atributo de conjuração de sua Técnica. Toda técnica permite usar Carisma (já que a Técnica deriva da interpretação da alma do personagem) e Sabedoria OU Inteligência, o que fazer mais sentido. Técnicas com nuances e regras específicas e técnicas que envolvem leis da física ou da natureza tendem a usarem Inteligência, já técnicas envolvendo emoções, técnicas que "brutas" ou "simples" na usabilidade e técnicas que mexem com a mente ou a alma tendem a usar Sabedoria. 
## Nível 1: Técnica Básica
O nível 1 garante um uso básico da Técnica, seja causando dano bruto, uma combinação de dano + salvaguarda, algum benefício para si mesmo/aliados ou malefício para os inimigos. Se a técnica envolver um conceito mais complexo, como usar expansão de domínio para conjurar a técnica, a habilidade de nível 1 tende a prover menos benefícios ou potência geral.
## Nível 3: Técnica Padrão
No nível 3 o personagem atinge o formato padrão de sua técnica. Isto pode ser simbolizado por uma evolução da Técnica Básica, como um efeito adicional que potencializa o dano bruto, um extensão da técnica (mesmo conceito mas aplicado de forma diferente), ou até uma expansão de domínio, caso a técnica só possa ser usada totalmente dentro da expansão. Técnicas do último tipo geralmente não dão dano direto e o domínio é do tipo não-letal, garantindo um efeito diferenciado.
## Nível 7: Extensão de Técnica
O nível 7 é caracterizado por adicionar novas aplicações da técnica, geralmente expandindo a interpretação dela de alguma forma. Dano em área em uma técnica de dano singular, benefício para aliados para técnicas de benefício próprio, potencialização dos efeitos do domínio, etc.
## Nível 10: Masterização da Técnica
Personagens no nível 10 possuem masterização da forma básica de sua técnica, sendo capazes de usar suas extensões e ampliar seus efeitos. A partir deste ponto o personagem está pronto para trilhar o caminho até se tornar Grau Especial.
## Níveis 13, 18 e 20: Pináculo da Técnica
Os níveis seguintes ao 10 possuem várias alternativas das quais o personagem pode escolher em qualquer ordem que desejar. Geralmente de 3 a 4 opções, com duas destas envolvendo a versão Maximum da Técnica, ao qual simboliza uma forma suprema de usabilidade da técnica, e a Expansão de Domínio, ao qual o personagem finalmente consegue imbuir sua técnica em um domínio, garantindo o efeito de acerto garantido.

# Exemplos de Efeitos de Técnicas
- Ataque a distância, alvo único e dano massivo;
- Dano em área, dano mediano e salvaguarda onde o alvo recebe metade do dano caso seja bem sucedido;
- Dano em área, dano alto e salvaguarda onde o alvo não recebe dano caso seja bem sucedido;
- Benefício mediano para aliados, área média, um efeito adverso para o usuário;
- Benefício mínimo para aliados, área grande, sem efeitos adversos;
- Benefício alto, aliado único, vários turnos;
- Ataque Corpo a Corpo, dano alto, salvaguarda onde o alvo adquire uma condição menor caso falhe;
- Ataque Corpo a Corpo, dano baixo, salvaguarda com dano alto;
- Benefício próprio médio por vários turnos;

| Dano/Benefício | Malefício | à Distância | Em Área/Salvaguarda | Duração       | Custo de EA |
| -------------- | --------- | ----------- | ------------------- | ------------- | ----------- |
| Alto           | Não       | Não         | Não                 | Imediato      | 1           |
| Médio          | Não       | Sim         | Não                 | Imediato      | 1           |
| Médio          | Não       | Não         | Sim                 | Imediato      | 1           |
| Baixo          | Não       | Sim         | Sim                 | Imediato      | 1           |
| Alto           | Sim       | Sim         | Não                 | 1 Turno       | 1           |
| Alto           | Sim       | Não         | Sim                 | 1 Turno       | 1           |
| Baixo          | Não       | Não         | Sim                 | Vários Turnos | 1           |
| Baixo          | Não       | Sim         | Não                 | Vários Turnos | 1           |
| Médio          | Não       | Não         | Não                 | Vários Turnos | 1           |
| Alto           | Sim       | Não         | Não                 | Vários Turnos | 1           |
|                |           |             |                     |               |             |
| Alto           | Não       | Sim         | Não                 | Imediato      | 2           |
| Alto           | Não       | Não         | Sim                 | Imediato      | 2           |
| Alto           | Sim       | Sim         | Sim                 | Imediato      | 2           |
| Alto           | Sim       | Não         | Sim                 | Vários Turnos | 2           |
| Alto           | Sim       | Sim         | Não                 | Vários Turnos | 2           |
| Médio          | Não       | Sim         | Sim                 | Imediato      | 2           |
| Médio          | Não       | Não         | Sim                 | Vários Turnos | 2           |
| Médio          | Não       | Sim         | Não                 | Vários Turnos | 2           |
| Baixo          | Não       | Sim         | Sim                 | Vários Turnos | 2           |
|                |           |             |                     |               |             |
| Alto           | Não       | Sim         | Sim                 | Imediato      | 3           |
| Alto           | Sim       | Sim         | Sim                 | Vários Turnos | 3           |

# Tipos de Dano
Você pode optar por alterar o tipo de dano da técnica ao qual suas técnicas se baseiam (igual ao Talento [[v1/Mecânicas/Talentos/Energia Amaldiçoada#Energia Amaldiçoada Elemental|Energia Amaldiçoada Elemental]]). O tipo de dano por padrão é **dano energético**, ao qual simboliza a Energia Amaldiçoada em sua forma "pura". Considere a tabela abaixo para o tipo de dano oposto, ao qual será utilizado na [[v1/Mecânicas/Talentos/Energia Amaldiçoada Reversa#Reversão de Feitiço|Energia Amaldiçoada Elemental]]. Converse com o mestre caso queira trocar o tipo de dano oposto para um que faça mais sentido com sua técnica.

| Tipo        | Descrição                                                     | Oposto      |
| ----------- | ------------------------------------------------------------- | ----------- |
| Contundente | Objetos contundentes, impactos concussivos, constrição, queda | Trovejante  |
| Cortante    | Objetos cortantes, garras                                     | Perfurante  |
| Perfurante  | Objetos perfurantes, presas                                   | Cortante    |
| Ácido       | Líquidos corrosivos, enzimas digestivas                       | Radiante    |
| Alma        | Energia que consome a alma                                    | Psíquico    |
| Elétrico    | Eletricidade, eletromagnetismo e seus fenômenos               | Trovejante  |
| Energético  | Energia Amaldiçoada pura, impacto cinético                    | -           |
| Congelante  | Água, gelo, neve                                              | Ígneo       |
| Fogo        | Fogo, chamas, magma                                           | Congelante  |
| Necrótico   | Energia que consome a vida, podridão                          | Radiante    |
| Psíquico    | Energia que consome a mente                                   | Alma        |
| Radiante    | Energia sagrada, Energia positiva                             | Necrótico   |
| Trovejante  | Som contundente, ondas sonoras                                | Contundente |
| Venenoso    | Gás tóxico, veneno                                            | Psíquico    |

# Dano de Técnicas por Nível
Use esta tabela como base para o dano de habilidades de Técnicas Inatas por nível. Você pode alterar os dados de dano de acordo com a ideia da técnica: por exemplo, se a técnica envolve um alvo único mas é formada por vários ataques seguidos, você pode alterar o dano para 4d4 (2d10 possui um máximo de dano de 20, enquanto 4d4 possui um máximo de 16. Isto é compensado pelo fato de que o dano mínimo de 4d4 é 4, enquanto o dano mínimo de 2d10 é 2.). Se a técnica possui um salvaguarda com efeito adicional, diminua o dado para 1d8 com o salvaguarda falho garantindo 2d8 de dano extra. Utilize a criatividade e mantenha contato constante com o Mestre para garantir a opinião dele na combinação de efeitos desejados.

| Nível de Feiticeiro | Um Alvo | Multi Alvo |
| ------------------- | ------- | ---------- |
| 1                   | 2d10    | 2d6        |
| 3                   | 3d10    | 4d6        |
| 7                   | 6d10    | 7d6        |
| 10                  | 8d10    | 8d6        |
| 13                  | 10d10   | 11d6       |
| 18                  | 12d10   | 13d6       |
| 20                  | 15d10   | 14d6       |
