content/V2/Mecânicas/Técnica Inata Personalizada.md
O mundo de Jujutsu é composto por uma miríada de Técnicas Inatas, mas os jogadores não estão presos às Técnicas inspiradas nos personagens da obra. A ideia é explorar ao máximo a criatividade dos jogadores e tornar os aspectos de roleplay e de combate mais próximos um do outro. 

A Técnica Inata é uma simplificação da personalidade, objetivos e forma de abordar situações de um personagem em específico. A interpretação da Técnica também impacta, fazendo até mesmo dois usuários da mesma Técnica terem variações que exprimem suas essências.

O principal ponto para evoluir sua Técnica Inata é a visualização: Você pode fazer qualquer coisa, desde que acredite que seja possível. O primeiro passo para a criação de sua expressão é utilizar uma Técnica já existente como base. Você pode alterar o tipo de dano ou algum efeito secundário, por exemplo.

Ao criar algo do zero, trate da mesma forma que você trata os Votos Vinculativos: converse com o Mestre e alinhe todos os pontos possíveis. Você não precisa pensar de cara em todas as evoluções da técnica, defina sua usabilidade básica e deixe a própria narrativa trazer ideias de aplicações avançadas para os níveis mais altos, sempre alinhando as expectativas com o Mestre.  
Uma técnica que é ofensiva, defensiva, provê movimentação e suporte não é uma técnica realista: você deve abrir mão de X para obter eficiência em Y. Considere também que as Técnicas Inatas possuem uma progressão relativamente semelhante e molde a sua em volta disso.
# Progressão

## Atributo de Conjuração
Primeiro, determine o atributo de conjuração de sua Técnica. Toda técnica permite usar Carisma (já que a Técnica deriva da interpretação da alma do personagem) e Sabedoria OU Inteligência, o que fazer mais sentido. Técnicas com nuances e regras específicas e técnicas que envolvem leis da física ou da natureza tendem a usarem Inteligência, já técnicas envolvendo emoções, técnicas que "brutas" ou "simples" na usabilidade e técnicas que mexem com a mente ou a alma tendem a usar Sabedoria. 
## Nível 1: Técnica Básica
O nível 1 garante um uso básico da Técnica, seja causando dano bruto, uma combinação de dano + salvaguarda, algum benefício para si mesmo/aliados ou malefício para os inimigos. Se a técnica envolver um conceito mais complexo, como usar expansão de domínio para conjurar a técnica, a habilidade de nível 1 tende a prover menos benefícios ou potência geral.
## Nível 3: Técnica Padrão
No nível 3 o personagem atinge o formato padrão de sua técnica. Isto pode ser simbolizado por uma evolução da Técnica Básica, como um efeito adicional que potencializa o dano bruto, um extensão da técnica (mesmo conceito mas aplicado de forma diferente), ou até uma expansão de domínio, caso a técnica só possa ser usada totalmente dentro da expansão. Técnicas do último tipo geralmente não dão dano direto e o domínio é do tipo não-letal, garantindo um efeito diferenciado.
## Nível 5: Extensão de Técnica
O nível 7 é caracterizado por adicionar novas aplicações da técnica, geralmente expandindo a interpretação dela de alguma forma. Dano em área em uma técnica de dano singular, benefício para aliados para técnicas de benefício próprio, potencialização dos efeitos do domínio, etc.
## Nível 7: Masterização da Técnica
Personagens no nível 10 possuem masterização da forma básica de sua técnica, sendo capazes de usar suas extensões e ampliar seus efeitos. A partir deste ponto o personagem está pronto para trilhar o caminho até se tornar Grau Especial.
## Níveis 9, 11 e 12: Pináculo da Técnica
Os níveis seguintes ao 10 possuem várias alternativas das quais o personagem pode escolher em qualquer ordem que desejar. Geralmente de 3 a 4 opções, com duas destas envolvendo a versão Maximum da Técnica, ao qual simboliza uma forma suprema de usabilidade da técnica, e a Expansão de Domínio, ao qual o personagem finalmente consegue imbuir sua técnica em um domínio, garantindo o efeito de acerto garantido.

# Exemplos de Efeitos de Técnicas
- Ataque a distância, alvo único e dano massivo;
- Dano em área, dano mediano e salvaguarda onde o alvo recebe metade do dano caso seja bem sucedido;
- Dano em área, dano alto e salvaguarda onde o alvo não recebe dano caso seja bem sucedido;
- Benefício mediano para aliados, área média, um efeito adverso para o usuário;
- Benefício mínimo para aliados, área grande, sem efeitos adversos;
- Benefício alto, aliado único, vários turnos;
- Ataque Corpo a Corpo, dano alto, salvaguarda onde o alvo adquire uma condição menor caso falhe;
- Ataque Corpo a Corpo, dano baixo, salvaguarda com dano alto;
- Benefício próprio médio por vários turnos;

| Dano/Benefício | Distância     | Duração  | Custo de EA |
| -------------- | ------------- | -------- | ----------- |
| Médio          | Corpo a Corpo | Imediato | 1           |

1 Upgrade -> Custo de EA = 2
3 Upgrades -> Custo de EA = 3
4 Upgrades -> Custo de EA = 5
5 Upgrades -> Custo de EA = 7
6 Upgrades -> Custo de EA = 9
Malefício/Downgrade de Dano -> Custo de EA - 1

| Custo | Dano/Benefício | Malefício | Distância     | Área           | Teste                    | Duração  |
| ----- | -------------- | --------- | ------------- | -------------- | ------------------------ | -------- |
| -2    |                | Alto      |               |                |                          |          |
| -1    | Baixo          | Médio     |               |                |                          |          |
| -     | Médio          |           | Corpo a Corpo |                |                          | Imediato |
| +1    | Alto           |           | 5 Unidades    | 2x2 Unidades   | DC Baixo (8 + mod)       | 1 Turno  |
| +2    |                |           | 10 Unidades   | 3x3 Unidades   | DC Médio (10 + mod)      | 3 Turnos |
| +3    | Muito Alto     |           | 20 Unidades   | 5x5 Unidades   | DC Alto (12 + mod)       | 5 Turnos |
| +4    |                |           | 40 Unidades   | 8x8 Unidades   | DC Muito Alto (14 + mod) |          |
| +5    | Extremo        |           | 60 Unidades   | 10x10 Unidades | DC Extremo (16 + mod)    |          |

# Dano de Técnicas por Nível
Use esta tabela como base para o dano de habilidades de Técnicas Inatas por nível. Você pode alterar os dados de dano de acordo com a ideia da técnica: por exemplo, se a técnica envolve um alvo único mas é formada por vários ataques seguidos, você pode alterar o dano para 2d4 em vez de 1d8. Se a técnica possui um salvaguarda com efeito adicional, diminua o dado para 1d4 com o salvaguarda falho garantindo 1d12 de dano extra. Utilize a criatividade e mantenha contato constante com o Mestre para garantir a opinião dele na combinação de efeitos desejados.

| Nível de Feitiço/Feiticeiro | Dano Baixo | Dano Médio | Dano Alto | Dano Muito Alto | Dano Extremo | Dano em Área | Custo de EA |
| --------------------------- | ---------- | ---------- | --------- | --------------- | ------------ | ------------ | ----------- |
| 1                           | 1d4        | 1d6        | 1d8       | 1d10            | 1d12         | 1d6          | 1-3         |
| 3                           | 1d6        | 1d8        | 1d10      | 1d12            | 2d6          | 2d6          | 3-5         |
| 5                           | 1d8        | 1d10       | 1d12      | 2d6             | 2d8          | 3d6          | 5-7         |
| 7                           | 2d4        | 2d6        | 2d8       | 2d10            | 2d12         | 4d6          | 7-9         |
| 9                           | 2d6        | 2d8        | 2d10      | 2d12            | 3d10         | 5d6          | 10          |
| 11                          | 2d8        | 2d10       | 2d12      | 3d10            | 3d12         | 6d6          | 15          |

| Nível de Feiticeiro | Vida Mínima | Vida Média | Vida Máxima |
| ------------------- | ----------- | ---------- | ----------- |
| 1                   | 13          | 15.5       | 18          |
| 2                   | 14          | 19         | 24          |
| 3                   | 15          | 22.5       | 30          |
| 4                   | 16          | 26         | 36          |
| 5                   | 17          | 29.5       | 42          |
| 6                   | 18          | 33         | 48          |
| 7                   | 19          | 36.5       | 54          |
| 8                   | 20          | 40         | 60          |
| 9                   | 21          | 43.5       | 66          |
| 10                  | 22          | 47         | 72          |
| 11                  | 23          | 50.5       | 78          |
| 12                  | 24          | 54         | 84          |

# Tipos de Dano
Você pode optar por alterar o tipo de dano da técnica ao qual suas técnicas se baseiam (igual ao Talento [[V1/Mecânicas/Talentos/Energia Amaldiçoada#Energia Amaldiçoada Elemental|Energia Amaldiçoada Elemental]]). O tipo de dano por padrão é **dano energético**, ao qual simboliza a Energia Amaldiçoada em sua forma "pura". Considere a tabela abaixo para o tipo de dano oposto, ao qual será utilizado na [[V1/Mecânicas/Talentos/Energia Amaldiçoada Reversa#Reversão de Feitiço|Energia Amaldiçoada Elemental]]. Converse com o mestre caso queira trocar o tipo de dano oposto para um que faça mais sentido com sua técnica.

| Tipo        | Descrição                                                     | Oposto                 |
| ----------- | ------------------------------------------------------------- | ---------------------- |
| Contundente | Objetos contundentes, impactos concussivos, constrição, queda | Cortante/Perfurante    |
| Cortante    | Objetos cortantes, garras                                     | Contundente/Perfurante |
| Perfurante  | Objetos perfurantes, presas                                   | Contundente/Cortante   |
| Ácido       | Líquidos corrosivos, enzimas digestivas                       | Radiante               |
| Alma        | Energia que afeta diretamente a alma                          | Psíquico               |
| Elétrico    | Eletricidade, eletromagnetismo e seus fenômenos               | -                      |
| Energético  | Energia Amaldiçoada pura, impacto cinético                    | -                      |
| Gelo        | Água, gelo, neve                                              | Fogo                   |
| Fogo        | Fogo, chamas, magma                                           | Gelo                   |
| Necrótico   | Energia que consome a vida, podridão                          | Radiante               |
| Psíquico    | Energia que afeta a mente                                     | Alma                   |
| Radiante    | Energia sagrada, Energia positiva                             | Necrótico              |
| Venenoso    | Gás tóxico, veneno                                            | Psíquico               |